# DistMultiFormer

./: CMakeLists.txt
build_1/: CMakeCache.txt  Makefile  cmake_install.cmake  mnist
performance/: CMakeLists.txt  operator_sum.cu
src/cuda/: blas.cu  distributed.cu  distributed.cuh  optimizer.cuh  rmsprop.cu  rmsprop.cuh  sigmoid.cu  storage.cu  storage.cuh
src/mnist/: dataset.cu  dataset.cuh  distributed_trainer.cu  distributed_trainer.cuh  main.cu  mnist.cu  mnist.cuh
